--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Tessera</h1>
 
-<%= link_to 'Login', new_user_path %>
+<%= link_to 'Login', new_user_path %><br />
+<%= link_to 'Create New User', new_user_path %>
