--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,11 +28,11 @@
   </div>
 
   <p>Select some pattern based on this shape to act as your password:</p>
-  <span id="polygon">
-    <canvas id="canvas" width="300" height="300">
+  <div id="polygon">
+    <canvas id="canvas" width="512" height="512">
       <p>Please get a modern browser.</p>
     </canvas>
-  </span>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
