--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Request New Pattern', 'refresh' %>
+<%= link_to 'Low Security Mode', 'refresh/0' %>
+<%= link_to 'High Security Mode', 'refresh/1' %>
 <%= link_to 'Back', users_path %>
