--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,12 +27,18 @@
   <hr />
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <% if type == 'new' %>
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    <% end %>
     <%= f.hidden_field :password %>
   </div>
 
-  <p>Select some pattern based on this shape to act as your password:</p>
+  <% if type == 'new' %>
+    <p>Select some pattern based on this shape to act as your password:</p>
+  <% else %>
+    <p>Enter a pattern you have saved to authenticate yourself.</p>
+  <% end %>
   <div id="polygon">
     <canvas id="canvas" width="512" height="512">
       <p>Please get a modern browser.</p>
