--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New user</h1>
 
-<%= render 'form' %>
+<%= render :partial => 'form', :locals => { :type => 'new' } %>
 
 <%= link_to 'Low Security Mode', 'refresh/0' %>
 <%= link_to 'High Security Mode', 'refresh/1' %>
