--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@user) do |f| %>
+<% url = if type == 'new' then 'create' else 'login' end %>
+<%= form_for @user, :url => url do |f| %>
   <%= javascript_tag do %>
     $(document).ready(function() {
       $("#polygon").storeVerticesAndDraw(
