different styling depending on security

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,8 @@
     $(document).ready(function() {
       $("#polygon").storeVerticesAndDraw(
         $.parseJSON('<%= raw @vertices.to_json %>'),
-        <%= raw @firstVertex %>
+        <%= @firstVertex %>,
+        <%= @security %>
       );
     });
   <% end %>
