--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Tessera</h1>
 
+<hr class="soften" />
+
 <% if params.has_key?(:notice) %>
   <div id="error_explanation">
     <h2><%= params[:notice] %></h2>
