--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
   <% end %>
 
-  <hr />
+  <hr class="soften" />
 
   <div class="field">
     <%= f.label :name %><br />
@@ -42,6 +42,4 @@
   <div class="actions">
     <%= f.submit "Submit", :onclick => "$('#polygon').writePatternToHiddenField()" %>
   </div>
-
-  <hr />
 <% end %>
