--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,1 @@
-<h1>New user</h1>
-
-<%= render :partial => 'form', :locals => { :type => 'new' } %>
-
-<%= link_to 'Low Security Mode', 'refresh/0' %>
-<%= link_to 'High Security Mode', 'refresh/1' %>
-<%= link_to 'Back', users_path %>
+<%= render :partial => 'form', :locals => { :title => 'New User', :type => 'new' } %>
