--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,7 +1,1 @@
-<h1>Login</h1>
-
-<%= render :partial => 'form', :locals => { :type => 'login' } %>
-
-<%= link_to 'Low Security Mode', 'refresh/0' %>
-<%= link_to 'High Security Mode', 'refresh/1' %>
-<%= link_to 'Back', users_path %>
+<%= render :partial => 'form', :locals => { :title => 'Login', :type => 'login' } %>
