add production files

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,5 @@
 <%= form_for @user, type == 'login' ? { :url => 'login' } : {} do |f| %>
-  <h2>
-    Tessera - <%= title %>
-  </h2>
+  <h3>Tessera - <%= title %></h3>
 
   <hr class="soften small-margin" />
 
