--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -38,4 +38,10 @@ body {
   .alert {
     margin-bottom: 10px;
   }
+
+  .field_with_errors {
+    background-color: transparent;
+    width: 100%;
+    color: red;
+  }
 }
