--- a/app/views/users/blocked.html.erb
+++ b/app/views/users/blocked.html.erb
@@ -2,4 +2,4 @@
 
 <hr class="soften small-margin" />
 
-<p>You are currently blocked from using Tessera due to too many login attempts. Please try again in N minutes.</p>
+<p>You are currently blocked from using Tessera due to too many login attempts. Please try again in <%= @time %>.</p>
