protect from dos attacks

--- a/app/views/users/dos.html.erb
+++ b/app/views/users/dos.html.erb
@@ -2,4 +2,4 @@
 
 <hr class="soften small-margin" />
 
-<p>You are currently blocked from using Tessera due to requesting too many pattern creations. Please try again in N minutes.</p>
+<p>You are currently blocked from using Tessera due to requesting too many pattern creations. Please try again in <%= @time %>.</p>
